# Asteroids

./: .gitignore  Asteroid.cpp  Asteroid.h  Bullet.cpp  Bullet.h  CMakeLists.txt  ChildGameObject.cpp  ChildGameObject.h  Collider.cpp  Collider.h  Colors.h  Component.cpp  Component.h  Documentation.html  EventHandler.cpp  EventHandler.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  LoaderParams.h  Mathf.cpp  Mathf.h  Motion.cpp  Motion.h  Player.cpp  Player.h  PointF.cpp  PointF.h  README.md  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Shooter.cpp  Shooter.h  TextureManager.cpp  TextureManager.h  (+11 more)
Components/: Asteroid.cpp  Asteroid.h  Bullet.cpp  Bullet.h  Collider.cpp  Collider.h  Component.cpp  Component.h  Motion.cpp  Motion.h  Renderer.cpp  Renderer.h  Shooter.cpp  Shooter.h  Transform.cpp  Transform.h  UFO.cpp  UFO.h
